--- a/src/Contenu/css/style.css
+++ b/src/Contenu/css/style.css
@@ -1,7 +1,3 @@
-html,
-body {
-  height: 100%;
-}
 
 body {
   color: #bfbfbf;
@@ -67,3 +63,53 @@ a {
   margin: 25px;
 }
 
+/* connexion */
+
+#login-name {
+  font-size: 55px;
+  padding-bottom: 50px;
+  color: white;
+}
+
+#login {
+  background-color: rgba(13, 13, 13, 0.2);
+  min-height: 500px;
+  padding: 40px 80px 40px 80px;
+  box-shadow: -10px -10px 9px #33cc33;
+  margin: 0 auto;
+}
+
+.user {
+  font-size: 29px;
+  font-family: arabic typesetting;
+  color: white;
+}
+
+#iconn {
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+  color: white;
+}
+
+#iconn1 {
+  background-color: #5cb85c;
+  border-color: #4cae4c;
+  color: white;
+}
+
+#text1 {
+  border-radius: 0;
+  height: 40px;
+}
+
+#text2 {
+  border-radius: 0;
+  height: 40px;
+}
+
+.btn {
+  width: 50%;
+  float: left;
+  height: 40px;
+  font-size: 18px;
+}
