--- a/src/Contenu/css/style.css
+++ b/src/Contenu/css/style.css
@@ -56,17 +56,6 @@ a:hover {
   color: #fff;
 }
 
-.business-header {
-  height: 50vh;
-  min-height: 300px;
-  background: url('../images/imgUne.jpg') center center no-repeat scroll;
-  border: 2px solid #00DFFC;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
-
 .card {
   height: 100%;
 }
@@ -97,6 +86,11 @@ a:hover {
 
 #txtComment {
   width: 50%;
+}
+
+#imageUne {
+  border: 2px solid #00DFFC;
+  margin-bottom: 50px;
 }
 
 /* Page Error */
